<resources>
    <string name="app_name">Quick Cash CSCI3130 G-11</string>
    <string name="ACCOUNT_EXISTS">Account with this email id already exists. Kindly click on login or try again with a different email id.</string>
    <string name="EMPLOYEE_MESSAGE"> %s, you are in the employee profile</string>
    <string name="EMPLOYER_MESSAGE"> %s, you are in the employer profile</string>
    <string name="WELCOME_MESSAGE"> Welcome, %s!</string>
    <string name="EMAIL_EMPTY">Fill in registered email</string>
    <string name="search_hint">Search for a job!</string>
    <string name="back">Back</string>
    <string name="open_drawer">Open menu</string>
    <string name="close_drawer">Close menu</string>
    <string name="ROLE_EMPLOYER">employer</string>
    <string name="ROLE_EMPLOYEE">employee</string>
    <string name="TOOLBAR_EMPLOYER">Employer Profile</string>
    <string name="TOOLBAR_EMPLOYEE">Employee Profile</string>
    <string name="SUBMIT_JOB">Submit a Job</string>
    <string name="POSTED_JOBS">Posted Jobs</string>
    <string name="PREFERRED_EMPLOYEES">Preferred Employees</string>
    <string name="ACCEPTED_JOBS">Accepted Jobs</string>
    <string name="SEARCH_JOBS">Search for Jobs</string>
    <string name="AVAILABLE_JOBS">Available Jobs</string>
    <string name="PREFERRED_JOBS">Preferred Jobs</string>
    <string name="ADVANCED_SEARCH">Advanced Search</string>
    <string name="SEARCH_RESULTS">Advanced Search Results</string>
    <string name="JOBS_IN_PROGRESS">Jobs in Progress</string>
    <string name="PAYMENT">Payment Transaction</string>
    <string name="INCOME_HISTORY">Income History</string>
    <string name="MY_PROFILE">My Profile</string>

    <string-array name="duration_types">
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
    </string-array>
</resources>