...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.037"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/instructionJobFormTextView" />

                <EditText
                    android:id="@+id/titleEditText"
                    android:layout_width="295dp"
                    android:layout_height="51dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="Enter the Title for your Job"
                    android:ems="10"
...
                    android:id="@+id/setDateTextView"
                    android:layout_width="139dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="4dp"
                    android:hint="Press button to "
                    app:layout_constraintEnd_toStartOf="@+id/datePickerButton"
                    app:layout_constraintHorizontal_bias="0.564"
                    app:layout_constraintStart_toEndOf="@+id/dateTextView"
                    app:layout_constraintTop_toBottomOf="@+id/titleEditText" />

                <Button
                    android:id="@+id/datePickerButton"
...
                    android:text="Job Type:"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

                <Spinner
                    android:id="@+id/jobTypeSpinner"
                    android:layout_width="293dp"
                    android:layout_height="61dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="20dp"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="@id/jobTypeTextView"
...
                    android:text="Expected Duration:"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/durationEditText"
                    android:layout_width="124dp"
                    android:layout_height="61dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="Enter the Expected Duration"
                    android:ems="10"
                    android:hint="Enter Duration"
                    android:inputType="number" />

                <Spinner
                    android:id="@+id/durationTypeSpinner"
                    android:layout_width="167dp"
                    android:layout_height="53dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
...
                    android:text="Urgency:"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/durationTextView" />

                <Spinner
                    android:id="@+id/urgencyTypeSpinner"
                    android:layout_width="272dp"
                    android:layout_height="57dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.389"
                    app:layout_constraintStart_toEndOf="@+id/urgencyTextView"
...
                    android:text="Salary:"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/urgencyTextView" />

                <EditText
                    android:id="@+id/salaryEditText"
                    android:layout_width="117dp"
                    android:layout_height="61dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:hint="Enter Salary"
                    android:inputType="number"
                    app:layout_constraintStart_toEndOf="@+id/salaryTextView"
                    app:layout_constraintTop_toBottomOf="@+id/urgencyTypeSpinner" />

                <Spinner
                    android:id="@+id/salaryTypeSpinner"
                    android:layout_width="153dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
...
                    android:text="Location:"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/salaryTextView" />

                <EditText
                    android:id="@+id/locationEditText"
                    android:layout_width="167dp"
                    android:layout_height="69dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="Enter Location"
                    android:inputType="text"
                    app:layout_constraintStart_toEndOf="@+id/locationTextView"
                    app:layout_constraintTop_toBottomOf="@+id/salaryTypeSpinner" />

                <Button
                    android:id="@+id/getLocationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/lightBlue"

                    android:text="Get Location" />
            </LinearLayout>
...
                    android:layout_marginStart="28dp"
                    android:text="Description:"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
...
                    android:inputType="textMultiLine" />

            </LinearLayout>


            <Button
                android:id="@+id/submitButton"
                android:layout_width="109dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/orange"
...
